<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/userlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    
    android:background="#000">

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_height="40dp"
        android:textSize="15sp"
        android:textColor="#fff"
        android:text="@string/logout" />




<ListView
        android:id="@android:id/list"
        android:layout_marginTop="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoutButton"
    />

<Button
    android:id="@+id/RefreshButton"
    android:layout_width="wrap_content"
    android:layout_height="40dp"
    android:layout_above="@android:id/list"
    android:layout_centerHorizontal="true"
    android:text="@string/refresh"
    android:textColor="#fff"
    android:textSize="15sp" />

<Button
    android:id="@+id/filterButton"
    android:layout_width="wrap_content"
    android:layout_height="40dp"
    android:layout_above="@android:id/list"
    android:layout_alignParentEnd="true"
    android:layout_alignParentRight="true"
    android:text="@string/filter"
    android:textColor="#fff"
    android:textSize="15sp" />

</RelativeLayout>
