<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000" >
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#000" >
    
        
        <Button
        android:id="@+id/logoutButton"
       android:layout_width="wrap_content"
        android:layout_height="40dp"
         style="?android:attr/buttonStyleSmall"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        
        android:textColor="#fff"
        android:textSize="15sp"
        android:text="@string/logout" />
        
        
        <TextView
        android:id="@+id/delText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/logoutButton"
        android:textColor="#fff"  
        android:layout_marginTop="10dp"
        android:text="@string/del" />
    
        <EditText
    
        android:id="@+id/node"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
         android:layout_below="@+id/delText"
        android:gravity="center"
        android:textColor="#fff"
        
        android:layout_centerHorizontal="true"
        android:background="@drawable/editborder"
      	android:layout_marginTop="20dp"
      	android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:inputType="" 
       />
        
    

    <Button
        android:id="@+id/delete"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="40dp"
      	android:layout_centerHorizontal="true"
        android:layout_below="@+id/node"
      	
      	android:textColor="#fff"
        android:layout_marginTop="20dp"
        android:text="@string/delete" />
    
    <TableLayout
           
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/nodeTable"
            android:layout_below="@+id/delete"
            android:stretchColumns="*"
            android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/RefreshButtonDel"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_above="@+id/delText"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/refresh"
        android:textColor="#fff"
        android:textSize="15sp" />

</RelativeLayout>
</ScrollView>